--- a/package.json
+++ b/package.json
@@ -13,24 +13,27 @@
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
     "dotenv": "^7.0.0",
-    "gatsby": "^2.1.37",
+    "gatsby": "^2.3.0",
     "gatsby-image": "^2.0.34",
     "gatsby-link": "^2.0.16",
+    "gatsby-plugin-layout": "^1.0.13",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sharp": "^2.0.29",
     "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-source-filesystem": "^2.0.27",
+    "gatsby-source-filesystem": "^2.0.28",
     "gatsby-source-shopify": "^2.0.21",
-    "gatsby-source-wordpress": "^3.0.47",
     "gatsby-transformer-sharp": "^2.1.17",
+    "nuka-carousel": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.5.0",
+    "react-slick": "^0.23.2",
     "shopify-buy": "^2.1.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
@@ -47,5 +50,5 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
+  }
 }
