--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "apollo-boost": "^0.3.1",
     "auth0-js": "^9.10.1",
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
     "dotenv": "^7.0.0",
@@ -28,9 +30,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.5.0",
-    "react-slick": "^0.23.2",
     "shopify-buy": "^2.1.1",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
