--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-SHOP_NAME=soicalstore
-SHOPIFY_ACCESS_TOKEN=559d0ec69c4147d8cd91cab41ee7e778
+SHOP_NAME=socialapp
+SHOPIFY_ACCESS_TOKEN=3eb3552d58fe669237eaf5305d196b1e
